# blackroad-prism-console

./: .aider.conf.yml  .codex.gitignore  .dockerignore  .editorconfig  .env  .env.aider  .env.docker.example  .env.example  .env.production  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .htmlhintrc  .markdownlint.yaml  .mergify.yml  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .size-limit.json  .sops.yaml  .yamllint.yaml  00_charter.md  AGENTS.md  AGENT_CHECKLIST.md  AGENT_WORKBOARD.md  AGENT_WORLD_README.md  ATHENA_MANIFEST.md  AUTOMATION_STATUS.md  BACKUP_POLICY.md  BALANCE.md  BUG_BACKLOG.md  CHANGELOG.md  CLEANUP_DECISIONS.md  CLEANUP_PLAN.md  CLEANUP_RESULTS.md  CODEFIX.md  (+243 more)
.algorithms/: 1.txt  (+10 more)
alice_lucidia/: README.md  __init__.py  pyproject.toml
alice_lucidia/agents/: alice.py  lucidia.py  tools.py
alice_lucidia/cli/: run.py
alice_lucidia/configs/: default.yaml
alice_lucidia/evaluation/: eval_calibration.py  eval_memory.py  eval_planning.py
alice_lucidia/memory/: index.py  store.py
alice_lucidia/models/: __init__.py  encoders.py  hopfield.py  natural_grad.py  ot.py  world_model.py
alice_lucidia/notebooks/: demo.ipynb
alice_lucidia/tests/: test_agents.py  test_hopfield.py  test_natural_grad.py  test_ot.py
alice_lucidia/training/: train_lucidia.py  train_retriever.py
apps/lucidia-desktop/src/tauri/: Cargo.toml
apps/lucidia-desktop/tauri/: Cargo.toml
apps/lucidia-desktop/tauri/src/: main.rs
blackroad-os/: README.md  pyproject.toml
blackroad-os/config/: default.yaml
blackroad-os/desktop/: README.md  package-lock.json  package.json
blackroad-os/desktop/public/: app-window.html  index.html
blackroad-os/desktop/public/scripts/: app-window.js  desktop.js
blackroad-os/desktop/public/styles/: desktop.css
blackroad-os/desktop/src/main/: index.js
blackroad-os/docs/: architecture.md
blackroad-os/manifests/: actions.yaml
blackroad-os/src/blackroad_agent/: __init__.py  agent.py  cli.py  config.py  manifest.py
blackroad-os/src/blackroad_agent/plugins/: base.py  flasher.py  model_runtime.py  telemetry.py
blackroad-os/src/blackroad_agent/transport/: base.py  http.py  mqtt.py
blackroad-os/tests/: test_config.py  test_manifest.py
linmath/: .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  NOTICE  README.md  SECURITY.md  meson.build  vcpkg.json
linmath/.github/workflows/: ci.yml  codeql.yml  sbom.yml
linmath/examples/: example.c
linmath/include/: linmath.h
linmath/packaging/conan/: conanfile.py
linmath/tests/: linmath_test.c
lucidia-monitor/: Makefile  README.md  pyproject.toml
lucidia-monitor/ci/: README.md
lucidia-monitor/configs/: example.yaml
lucidia-monitor/docs/: README.md
lucidia-monitor/hardening/: README.md
lucidia-monitor/interfaces/: README.md
lucidia-monitor/loadtest/: README.md
lucidia-monitor/lucidia_monitor/: __init__.py  __main__.py  demo.py
lucidia-monitor/mocks/: README.md
lucidia-monitor/prober/: README.md
lucidia-monitor/qualifier/: README.md
lucidia-monitor/qualifier/scenarios/: identity_attestation.yaml
lucidia-monitor/schemas/: ExecutionIntent.json
lucidia-presence/presence_core/: Cargo.toml
lucidia-presence/presence_core/src/: lib.rs
lucidia-presence/presence_host_desktop/: Cargo.toml
lucidia-presence/presence_host_desktop/src/: main.rs
lucidia-presence/presence_host_web/: Cargo.toml
lucidia-presence/presence_host_web/src/: lib.rs
opt/blackroad/lucidia/: SECURITY.md  __init__.py  docker-compose.yml  network-policies.yml  pyproject.toml
opt/blackroad/lucidia/adapters/: anthropic_adapter.py  anthropic_tools.py
opt/blackroad/lucidia/agents/: clfm_agent.py  roadie_ai_math.py  shap_e_agent.py
opt/blackroad/lucidia/app/: .dockerignore  .editorconfig  .gitattributes  .pre-commit-config.yaml  Dockerfile  Makefile
opt/blackroad/lucidia/astro/: __init__.py
opt/blackroad/lucidia/clfm/: __init__.py
opt/blackroad/lucidia/containers/: Dockerfile.clfm
opt/blackroad/lucidia/curricula/: ai_math_roadmap.json
opt/blackroad/lucidia/examples/: run_claude.py
opt/blackroad/lucidia/handlers/: go_chat.py
opt/blackroad/lucidia/prompts/: codex_ai_math_prompt.md  codex_shap_e_prompt.md  quantum_invocation.prompt
opt/blackroad/lucidia/tests/: test_clfm_minimal.py
opt/blackroad/lucidia/w2s/: run_w2s.sh
opt/blackroad/lucidia_gemm/: CMakeLists.txt  setup.sh
opt/blackroad/lucidia_gemm/examples/: use_in_lucidia.py
opt/blackroad/lucidia_gemm/python/: bindings.cpp
opt/blackroad/lucidia_gemm/src/: lucidia_gemm_cublaslt.cpp  lucidia_gemm_cutlass.cu
opt/blackroad/symbol-gateway/: Cargo.toml  install.sh
prism_os/: Cargo.toml
prism_os/src/: lib.rs  memory.rs  vfs.rs
prism_os/tests/: vfs.rs
prismos/prism-core/: Cargo.toml
prismos/prism-core/src/: lib.rs
prismos/prism-core/tests/: integration.rs
services/auth/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  mypy.ini  pyproject.toml  ruff.toml
services/auth/scripts/: export_openapi.py
services/prism-console-api/: .env.example  Makefile  README.md  pyproject.toml
services/prism-console-api/scripts/: export_openapi.py
services/prism-console-api/tests/: conftest.py
services/roadglitch/: .env.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  ruff.toml
services/roadglitch/docs/: connectors.md  workflow-spec.md
services/roadview-search/: .env.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  mypy.ini  pyproject.toml  ruff.toml
services/roadview-search/docs/: roadview-openapi.json
services/roadview-search/fixtures/: curated_seed.json
services/roadview-search/scripts/: export_openapi.py
services/roadview-search/tests/: conftest.py
tools/lucidia-autotester/: .pre-commit-config.yaml  Makefile  README.md  dev_requirements.txt  pyproject.toml
tools/lucidia-autotester/tests/: common_requirements.txt  conftest.py
tools/lucidia-review/: README.md  pyproject.toml  requirements.txt
tools/lucidia-review/lucidia_review/: __init__.py  cli.py
(+10615 files in other folders)
