[project]
name = "blackroad-prism-console"
version = "0.1.0"
description = "Offline PLM & Manufacturing Ops (Phase 37) — deterministic, file-backed."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BlackRoad", email = "eng@blackroadinc.us" }]
dependencies = [
    "paho-mqtt",
    "typer>=0.9.0",
    "fastapi",
    "pydantic",
    "jinja2",
    "uvicorn",
    "click",
]

[project.scripts]
brc = "cli.console:main"
blackroad = "cli.blackroad:cli"
blackroad-api = "agent.api:main"
blackroad-dashboard = "agent.dashboard:main"
blackroad-agent = "agent.daemon:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cli", "cli.*", "agent", "agent.*"]

[tool.setuptools.package-data]
agent = ["templates/*.html"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
extend-select = ["I"]
