[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackroad-prism-console"
version = "0.1.0"
description = "Offline PLM & Manufacturing Ops (Phase 37) — deterministic, file-backed."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Blackroad", email = "eng@blackroadinc.us" }]
dependencies = [
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
    "paho-mqtt>=1.6.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
brc = "cli.console:main"
blackroad = "cli.blackroad:cli"
blackroad-api = "agent.api:main"
blackroad-agent = "agent.daemon:main"
blackroad-dashboard = "agent.dashboard:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
agent = ["templates/*.html"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
extend-select = ["I"]
