[package]
name = "presence_host_desktop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tauri = { version = "1", features = ["api-all"] }

[dependencies.presence_core]
path = "../presence_core"

[dependencies.presence_net]
path = "../presence_net"

[[bin]]
name = "presence_host_desktop"
path = "src/main.rs"
