[package]
name = "prism-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread", "sync", "io-util"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
tempfile = "3"
