[tool.poetry]
name = "blackroad-auth"
version = "0.1.0"
description = "Auth Service for BlackRoad"
authors = ["BlackRoad Engineering <eng@blackroad.io>"]
packages = [{ include = "auth", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlmodel = "^0.0.16"
aiosqlite = "^0.19.0"
alembic = "^1.13.0"
pydantic = "^1.10.14"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
argon2-cffi = "^23.1.0"
pyjwt = {version = "^2.8.0", extras = ["crypto"]}
python-dotenv = "^1.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
schemathesis = "^3.18.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
plugins = []
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["auth"]
