[tool.poetry]
name = "roadview-search"
version = "0.1.0"
description = "RoadView Search Service"
authors = ["BlackRoad AI <engineering@blackroad.io>"]
readme = "README.md"
packages = [{ include = "roadview", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
sqlmodel = "^0.0.14"
aiosqlite = "^0.19.0"
structlog = "^23.1.0"
prometheus-client = "^0.20.0"
python-dateutil = "^2.8.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
coverage = "^7.4.0"
ruff = "^0.4.0"
mypy = "^1.8.0"
schemathesis = "^3.26.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict = false
