[tool.poetry]
name = "roadview-search"
version = "0.1.0"
description = "RoadView Search Service"
authors = ["BlackRoad <eng@blackroad.io>"]
packages = [{ include = "roadview", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.19"
aiosqlite = "^0.19.0"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
python-dateutil = "^2.9.0"
httpx = "^0.27.0"
slowapi = "^0.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
schemathesis = "^3.19.6"
ruff = "^0.4.4"
mypy = "^1.9.0"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
ignore_missing_imports = true
