[project]
name = "lucidia-autotester"
version = "0.1.0"
description = "Nightly sanity checks for Lucidia/BlackRoad services"
authors = [{name="BlackRoad", email="dev@blackroad.io"}]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "pydantic",
    "pytest-rerunfailures",
    "pytest-timeout",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.bandit]
targets = ["tests", "bin"]
