[project]
name = "lucidia-review"
version = "0.0.0"
description = "Lucidia Peer-Review Agent"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.scripts]
lucidia-review = "lucidia_review.cli:main"

[project.dependencies]
ruff = "0.6.9"
mypy = "1.10.0"
bandit = "1.7.5"
radon = "6.0.1"
pip-audit = "2.7.2"
safety = "2.3.5"
