[package]
name = "lucidia-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
tempfile = "3"

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.tauri]
version = "1"
features = [ "dialog-open", "fs-exists", "path-all",]

[dependencies.chrono]
version = "0.4"
features = [ "serde",]

[dependencies.uuid]
version = "1"
features = [ "v4",]

[build-dependencies.tauri-build]
version = "1"
