[project]
name = "lucidia-clfm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.8.0",
    "numpy==1.26.4",
    "scipy==1.11.4",
    "einops==0.7.0",
    "h5py==3.9.0",
    "pydantic==2.5.2",
    "typer==0.9.0",
    "fastapi==0.110.0",
    "uvicorn==0.24.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
