[package]
name = "symbol-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
codex = "0.1.1"                 # typst/codex crate (symbols ↔ names)  [oai_citation:2‡Crates.io](https://crates.io/crates/codex?utm_source=chatgpt.com)
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
