[package]
name = "lucidia-desktop"
version = "0.1.0"
edition = "2021"
description = "Lucidia Desktop Tauri shell"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["shell-all"] }
